--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<img id="header-logo" draggable="false" src="/favicon/favicon.svg" alt="Logo de iLupo Warehouse" style="display: block; margin: 0 auto 1.5rem auto; width: 128px; height: 128px; -webkit-user-select: none; -ms-user-select: none; user-select: none;">
         <h1>iLupo Warehouse</h1>
         <p class="subtitle" id="subtitle">
-            "Con gran fluidez, mi pequeño workflow exhibe hoy la hazaña de zanjar viejos bugs."
+            "El jefe zanjó con gran y clave paso de fixing exacto el workflow que exhibía mi keyboard. ¡Qué hazaña!"
         </p>
     </header>
 
@@ -522,4 +522,5 @@
 
 </body>
 </html>
+
 
