--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         const secretActions = {
             "admin": () => { alert('Acceso correcto. Redirigiendo...'); window.location.href = 'panel.html'; },
             "boykisser": () => { window.easterEggFunctions.boykisser(); },
-            "terminal": () => { cargarTerminal(); } // Puedes cambiar "cmd" por "terminal" si lo prefieres
+            "cmd": () => { cargarTerminal(); } // Puedes cambiar "cmd" por "terminal" si lo prefieres
         };
 
         if (subtitleElement) {
@@ -522,5 +522,6 @@
 
 </body>
 </html>
+
 
 
