--- a/juego/juego.html
+++ b/juego/juego.html
@@ -93,11 +93,16 @@
         </div>
     </div>
     
-    <div id="debug-minigame-overlay" class="modal-overlay hidden"></div>
-    <div id="video-seo-minigame-overlay" class="modal-overlay hidden"></div>
-    <div id="post-creation-modal" class="modal-overlay hidden"></div>
+    <div id="debug-minigame-overlay" class="modal-overlay hidden">
+        </div>
+    <div id="video-seo-minigame-overlay" class="modal-overlay hidden">
+        </div>
+    <div id="post-creation-modal" class="modal-overlay hidden">
+        </div>
 
     <a href="../index.html" class="back-to-portfolio-link">← Volver al Portfolio</a>
+
+    <div id="notification-container"></div>
 
     <script src="juego.js" defer></script>
 
