--- a/juego/juego.html
+++ b/juego/juego.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
-    <link rel="stylesheet" href="../style.css"> <link rel="stylesheet" href="juego.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="juego.css">
 
     <link rel="icon" href="/favicon/favicon.ico" />
 </head>
@@ -171,7 +172,13 @@
 
     <a href="../index.html" class="back-to-portfolio-link">← Volver al Portfolio</a>
     <div id="notification-container"></div>
-    <script src="juego.js" defer></script>
+
+    <script src="data.js" defer></script>
+    <script src="ui.js" defer></script>
+    <script src="shop.js" defer></script>
+    <script src="minigames.js" defer></script>
+    <script src="events.js" defer></script>
+    <script src="main.js" defer></script>
 
 </body>
 </html>
