--- a/juego/juego.html
+++ b/juego/juego.html
@@ -49,6 +49,7 @@
             <section id="dev-panel" class="view-panel active">
                 <h2>Oficina de Desarrollo</h2>
                 <div id="active-project-slot"></div>
+                <div id="skills-panel"></div>
                 <div id="completed-projects-container">
                     <h3>Proyectos que generan ingresos</h3>
                     <div id="completed-projects-list"></div>
@@ -65,6 +66,12 @@
                 </div>
             </section>
 
+            <section id="courses-panel" class="view-panel">
+                <h2><i class="fas fa-graduation-cap"></i> Centro de Formación</h2>
+                <div id="courses-container"></div>
+                <div id="active-course-container"></div>
+            </section>
+
             <aside id="news-panel">
                 <h3><i class="fas fa-fire"></i> Noticias y Tendencias</h3>
                 <div id="news-content"></div>
@@ -74,6 +81,7 @@
         <nav id="game-nav">
             <button class="nav-button active" data-view="dev-panel"><i class="fas fa-code"></i> Desarrollo</button>
             <button class="nav-button" data-view="shop-panel"><i class="fas fa-shopping-cart"></i> Tienda</button>
+            <button class="nav-button" data-view="courses-panel"><i class="fas fa-graduation-cap"></i> Cursos</button>
         </nav>
     </div>
 
@@ -174,6 +182,7 @@
     <div id="notification-container"></div>
 
     <script src="data.js" defer></script>
+    <script src="courses.js" defer></script>
     <script src="ui.js" defer></script>
     <script src="shop.js" defer></script>
     <script src="minigames.js" defer></script>
