--- a/juego/juego.html
+++ b/juego/juego.html
@@ -138,6 +138,15 @@
                          <li><span><strong>Marketing:</strong></span><div>La habilidad de Marketing solo puede mejorarse a través de cursos, lo que la convierte en una inversión estratégica.</div></li>
                     </ul>
                 </div>
+                <div class="help-section">
+                    <h4><i class="fas fa-flask"></i> Investigación y Desarrollo (I+D)</h4>
+                    <p>Además de los cursos, puedes potenciar tus proyectos investigando nuevas tecnologías en la pestaña de I+D. Esto te permitirá crear proyectos más complejos y rentables.</p>
+                    <ul>
+                        <li><span><strong>Investigar Tecnologías:</strong></span><div>Cada investigación tiene un coste en dinero y días. Avanzará un día cada vez que duermas. Puedes tener una investigación, un curso y un proyecto activos al mismo tiempo.</div></li>
+                        <li><span><strong>Árboles Tecnológicos:</strong></span><div>Existen 3 árboles de investigación (Programación, Diseño, Marketing). Para desbloquear nodos avanzados, necesitarás un nivel mínimo en la habilidad correspondiente.</div></li>
+                        <li><span><strong>Proyectos Mejorados:</strong></span><div>Al iniciar un proyecto, podrás añadirle las tecnologías que hayas desbloqueado. Cada una modificará el coste, tiempo y la calidad final del proyecto.</div></li>
+                    </ul>
+                </div>
                  <div class="help-section">
                     <h4><i class="fas fa-server"></i> Gastos y Game Over</h4>
                     <p>Cada 7 días, tendrás que pagar el <strong>alquiler del servidor</strong>. Es un gasto fijo que aumentará a medida que crezcas. Si no puedes pagarlo y tu saldo queda en negativo, será <strong>Game Over</strong>.</p>
