--- a/juego/juego.html
+++ b/juego/juego.html
@@ -49,7 +49,7 @@
         </main>
         
         <div id="taskbar">
-            <button id="start-button"><i class="fab fa-windows"></i></button>
+            <button id="start-button"><i class="fas fa-desktop"></i></button>
             <div id="running-apps"></div>
             <div id="clock">12:00 PM</div>
         </div>
@@ -139,7 +139,34 @@
             <button class="close-modal-button">&times;</button>
             <h3><i class="fas fa-question-circle"></i> Guía del Juego</h3>
             <div class="help-container">
+                <div class="help-section">
+                    <h4><i class="fas fa-desktop"></i> Nueva Interfaz: Tu Escritorio</h4>
+                    <p>¡Bienvenido al nuevo sistema operativo! Ahora el juego simula un entorno de escritorio. En lugar de pestañas, ahora tienes **aplicaciones** con iconos en el escritorio. Haz doble clic en un icono para abrir una aplicación en su propia ventana, que puedes mover y cerrar como en un SO real.</p>
                 </div>
+                <div class="help-section">
+                    <h4><i class="fas fa-sync-alt"></i> El Nuevo Flujo de Desarrollo</h4>
+                    <p>El proceso para crear un proyecto ahora es más inmersivo y se divide en tres aplicaciones principales:</p>
+                    <ol>
+                        <li><strong>Iniciar un Proyecto:</strong> Abre la aplicación **Code Studio**. Si no tienes un proyecto activo, verás un botón para iniciar uno nuevo. Esto abrirá el asistente de siempre para elegir tipo, nombre y tecnologías.</li>
+                        <li><strong>Fase de Desarrollo y Depuración (Code Studio):</strong> Una vez iniciado, el proyecto progresará dentro de Code Studio. Verás cómo se escribe el código automáticamente. Cuando termine, aparecerá el botón para iniciar el minijuego de **depuración** dentro de esta misma app.</li>
+                        <li><strong>Fase de Vídeo (MyTube):</strong> Superada la depuración, el proyecto pasará a la fase de vídeo. Ahora deberás abrir la app **MyTube** para encontrar el botón que inicia el minijuego de **optimización SEO**.</li>
+                        <li><strong>Fase de Publicación (Navegador):</strong> Con el vídeo listo, el proyecto está casi terminado. Abre la app **Navegador** para encontrar el botón final de **Publicar**, que añadirá el proyecto a tu Almacén para generar ingresos.</li>
+                    </ol>
+                </div>
+                <div class="help-section">
+                    <h4><i class="fas fa-box-open"></i> Otras Aplicaciones Útiles</h4>
+                    <ul>
+                        <li><span><strong>Almacén:</strong></span><div>Aquí puedes ver la lista de todos tus proyectos completados y los ingresos que generan.</div></li>
+                        <li><span><strong>Estadísticas:</strong></span><div>Consulta el progreso de tus habilidades (Programación, Diseño, Marketing).</div></li>
+                        <li><span><strong>Tienda, Cursos, I+D:</strong></span><div>Estas aplicaciones funcionan como antes, pero ahora dentro de sus propias ventanas.</div></li>
+                         <li><span><strong>Dormir:</strong></span><div>Para pasar al día siguiente, haz clic en el icono del menú de inicio en la esquina inferior izquierda y luego en el botón 'Dormir'.</div></li>
+                    </ul>
+                </div>
+                 <div class="help-section">
+                    <h4><i class="fas fa-server"></i> Gastos y Game Over</h4>
+                    <p>Recuerda que cada 7 días tendrás que pagar el <strong>alquiler del servidor</strong>. Si tu saldo es negativo después del pago, será <strong>Game Over</strong>.</p>
+                </div>
+            </div>
         </div>
     </div>
     
