--- a/juego/juego.html
+++ b/juego/juego.html
@@ -43,6 +43,7 @@
                 <span id="date-text">Día 1</span>
             </div>
         </header>
+		<div id="monitor">
 
         <main id="desktop">
             <div id="desktop-icons"></div>
@@ -56,14 +57,15 @@
 
         <div id="start-menu" class="hidden">
             <div class="start-menu-header">
-                <img src="/img/logo.png" alt="User Avatar">
-                <span>iLupo</span>
+                <img src="https://i.ibb.co/S4ksHXhy/defava.png" alt="User Avatar">
+                <span>Guest</span>
             </div>
             <div class="start-menu-body"></div>
             <div class="start-menu-footer">
                 <button id="shutdown-button"><i class="fas fa-power-off"></i> Dormir</button>
             </div>
         </div>
+	</div> ```
     </div>
 
     <template id="code-studio-template">
@@ -140,26 +142,30 @@
             <h3><i class="fas fa-question-circle"></i> Guía del Juego</h3>
             <div class="help-container">
                 <div class="help-section">
-                    <h4><i class="fas fa-desktop"></i> Nueva Interfaz: Tu Escritorio</h4>
-                    <p>¡Bienvenido al nuevo sistema operativo! Ahora el juego simula un entorno de escritorio. En lugar de pestañas, ahora tienes **aplicaciones** con iconos en el escritorio. Haz doble clic en un icono para abrir una aplicación en su propia ventana, que puedes mover y cerrar como en un SO real.</p>
+                    <h4><i class="fas fa-desktop"></i> Bienvenido a tu Escritorio Virtual</h4>
+                    <p>En <strong>iLupo Dev Tycoon</strong>, tu objetivo es evolucionar de un desarrollador aficionado a un magnate tecnológico. Toda la gestión del juego se realiza a través de un entorno de escritorio simulado.</p>
+                    <ul>
+                        <li><span><strong>Aplicaciones:</strong></span><div>Todas las funciones del juego, como la tienda o los cursos, son "apps" con iconos en tu escritorio. Haz doble clic en un icono para abrir la aplicación en su propia ventana.</div></li>
+                        <li><span><strong>Ventanas:</strong></span><div>Puedes mover las ventanas arrastrándolas por su barra superior y cerrarlas con el botón 'X'.</div></li>
+                    </ul>
                 </div>
                 <div class="help-section">
-                    <h4><i class="fas fa-sync-alt"></i> El Nuevo Flujo de Desarrollo</h4>
-                    <p>El proceso para crear un proyecto ahora es más inmersivo y se divide en tres aplicaciones principales:</p>
+                    <h4><i class="fas fa-sync-alt"></i> El Flujo de Desarrollo</h4>
+                    <p>Para crear un proyecto, seguirás un proceso realista a través de varias aplicaciones especializadas:</p>
                     <ol>
-                        <li><strong>Iniciar un Proyecto:</strong> Abre la aplicación **Code Studio**. Si no tienes un proyecto activo, verás un botón para iniciar uno nuevo. Esto abrirá el asistente de siempre para elegir tipo, nombre y tecnologías.</li>
-                        <li><strong>Fase de Desarrollo y Depuración (Code Studio):</strong> Una vez iniciado, el proyecto progresará dentro de Code Studio. Verás cómo se escribe el código automáticamente. Cuando termine, aparecerá el botón para iniciar el minijuego de **depuración** dentro de esta misma app.</li>
-                        <li><strong>Fase de Vídeo (MyTube):</strong> Superada la depuración, el proyecto pasará a la fase de vídeo. Ahora deberás abrir la app **MyTube** para encontrar el botón que inicia el minijuego de **optimización SEO**.</li>
-                        <li><strong>Fase de Publicación (Navegador):</strong> Con el vídeo listo, el proyecto está casi terminado. Abre la app **Navegador** para encontrar el botón final de **Publicar**, que añadirá el proyecto a tu Almacén para generar ingresos.</li>
+                        <li><strong>Iniciar Proyecto (en Code Studio):</strong> Abre la app **Code Studio**. Allí encontrarás el botón para iniciar un nuevo proyecto, que te guiará para elegir su tipo, nombre y las tecnologías que has investigado.</li>
+                        <li><strong>Desarrollo y Depuración (en Code Studio):</strong> El proyecto avanzará automáticamente dentro de Code Studio. Cuando la primera fase termine, deberás superar el minijuego de depuración en esta misma aplicación.</li>
+                        <li><strong>Vídeo y SEO (en MyTube):</strong> Una vez depurado, abre la app **MyTube**. Desde aquí, podrás iniciar el minijuego de optimización SEO para promocionar tu proyecto.</li>
+                        <li><strong>Publicación (en Navegador):</strong> Con el vídeo listo, el paso final es abrir el **Navegador**. Dentro, encontrarás la opción para publicar tu proyecto en tu "Almacén", momento en el que empezará a generar ingresos pasivos.</li>
                     </ol>
                 </div>
                 <div class="help-section">
                     <h4><i class="fas fa-box-open"></i> Otras Aplicaciones Útiles</h4>
                     <ul>
-                        <li><span><strong>Almacén:</strong></span><div>Aquí puedes ver la lista de todos tus proyectos completados y los ingresos que generan.</div></li>
-                        <li><span><strong>Estadísticas:</strong></span><div>Consulta el progreso de tus habilidades (Programación, Diseño, Marketing).</div></li>
-                        <li><span><strong>Tienda, Cursos, I+D:</strong></span><div>Estas aplicaciones funcionan como antes, pero ahora dentro de sus propias ventanas.</div></li>
-                         <li><span><strong>Dormir:</strong></span><div>Para pasar al día siguiente, haz clic en el icono del menú de inicio en la esquina inferior izquierda y luego en el botón 'Dormir'.</div></li>
+                        <li><span><strong>Almacén:</strong></span><div>Consulta la lista de todos tus proyectos completados y los ingresos que generan cada día.</div></li>
+                        <li><span><strong>Estadísticas:</strong></span><div>Monitoriza el nivel y la experiencia (XP) de tus habilidades clave.</div></li>
+                        <li><span><strong>Tienda, Cursos, I+D:</strong></span><div>Invierte tu dinero en mejoras de hardware, formación para ganar XP o investiga nuevas tecnologías para potenciar tus proyectos.</div></li>
+                         <li><span><strong>Dormir (Menú de Inicio):</strong></span><div>Para pasar al día siguiente y cobrar tus ingresos, haz clic en el botón de menú de la esquina inferior izquierda y luego en "Dormir".</div></li>
                     </ul>
                 </div>
                  <div class="help-section">
