--- a/juego/juego.html
+++ b/juego/juego.html
@@ -65,7 +65,7 @@
                 <button id="shutdown-button"><i class="fas fa-power-off"></i> Dormir</button>
             </div>
         </div>
-	</div> ```
+	</div>
     </div>
 
     <template id="code-studio-template">
@@ -141,38 +141,38 @@
             <button class="close-modal-button">&times;</button>
             <h3><i class="fas fa-question-circle"></i> Guía del Juego</h3>
             <div class="help-container">
-                <div class="help-section">
-                    <h4><i class="fas fa-desktop"></i> Bienvenido a tu Escritorio Virtual</h4>
-                    <p>En <strong>iLupo Dev Tycoon</strong>, tu objetivo es evolucionar de un desarrollador aficionado a un magnate tecnológico. Toda la gestión del juego se realiza a través de un entorno de escritorio simulado.</p>
-                    <ul>
-                        <li><span><strong>Aplicaciones:</strong></span><div>Todas las funciones del juego, como la tienda o los cursos, son "apps" con iconos en tu escritorio. Haz doble clic en un icono para abrir la aplicación en su propia ventana.</div></li>
-                        <li><span><strong>Ventanas:</strong></span><div>Puedes mover las ventanas arrastrándolas por su barra superior y cerrarlas con el botón 'X'.</div></li>
-                    </ul>
-                </div>
-                <div class="help-section">
-                    <h4><i class="fas fa-sync-alt"></i> El Flujo de Desarrollo</h4>
-                    <p>Para crear un proyecto, seguirás un proceso realista a través de varias aplicaciones especializadas:</p>
-                    <ol>
-                        <li><strong>Iniciar Proyecto (en Code Studio):</strong> Abre la app **Code Studio**. Allí encontrarás el botón para iniciar un nuevo proyecto, que te guiará para elegir su tipo, nombre y las tecnologías que has investigado.</li>
-                        <li><strong>Desarrollo y Depuración (en Code Studio):</strong> El proyecto avanzará automáticamente dentro de Code Studio. Cuando la primera fase termine, deberás superar el minijuego de depuración en esta misma aplicación.</li>
-                        <li><strong>Vídeo y SEO (en MyTube):</strong> Una vez depurado, abre la app **MyTube**. Desde aquí, podrás iniciar el minijuego de optimización SEO para promocionar tu proyecto.</li>
-                        <li><strong>Publicación (en Navegador):</strong> Con el vídeo listo, el paso final es abrir el **Navegador**. Dentro, encontrarás la opción para publicar tu proyecto en tu "Almacén", momento en el que empezará a generar ingresos pasivos.</li>
-                    </ol>
-                </div>
-                <div class="help-section">
-                    <h4><i class="fas fa-box-open"></i> Otras Aplicaciones Útiles</h4>
-                    <ul>
-                        <li><span><strong>Almacén:</strong></span><div>Consulta la lista de todos tus proyectos completados y los ingresos que generan cada día.</div></li>
-                        <li><span><strong>Estadísticas:</strong></span><div>Monitoriza el nivel y la experiencia (XP) de tus habilidades clave.</div></li>
-                        <li><span><strong>Tienda, Cursos, I+D:</strong></span><div>Invierte tu dinero en mejoras de hardware, formación para ganar XP o investiga nuevas tecnologías para potenciar tus proyectos.</div></li>
-                         <li><span><strong>Dormir (Menú de Inicio):</strong></span><div>Para pasar al día siguiente y cobrar tus ingresos, haz clic en el botón de menú de la esquina inferior izquierda y luego en "Dormir".</div></li>
-                    </ul>
-                </div>
-                 <div class="help-section">
-                    <h4><i class="fas fa-server"></i> Gastos y Game Over</h4>
-                    <p>Recuerda que cada 7 días tendrás que pagar el <strong>alquiler del servidor</strong>. Si tu saldo es negativo después del pago, será <strong>Game Over</strong>.</p>
-                </div>
-            </div>
+    <div class="help-section">
+        <h4><i class="fas fa-desktop"></i> Bienvenido a tu Escritorio Virtual</h4>
+        <p>En <strong>iLupo Dev Tycoon</strong>, tu objetivo es evolucionar de un desarrollador aficionado a un magnate tecnológico. Toda la gestión del juego se realiza a través de un entorno de escritorio simulado.</p>
+        <ul>
+            <li><span><strong>Aplicaciones:</strong></span><div>Todas las funciones del juego, como la tienda o los cursos, son "apps" con iconos en tu escritorio. Haz doble clic en un icono para abrir la aplicación en su propia ventana.</div></li>
+            <li><span><strong>Ventanas:</strong></span><div>Puedes mover las ventanas arrastrándolas por su barra superior y cerrarlas con el botón 'X'.</div></li>
+        </ul>
+    </div>
+    <div class="help-section">
+        <h4><i class="fas fa-sync-alt"></i> El Flujo de Desarrollo</h4>
+        <p>Para crear un proyecto, seguirás un proceso realista a través de varias aplicaciones especializadas:</p>
+        <ol>
+            <li><strong>Iniciar Proyecto (en Code Studio):</strong> Abre la app <strong>Code Studio</strong>. Allí encontrarás el botón para iniciar un nuevo proyecto, que te guiará para elegir su tipo, nombre y las tecnologías que has investigado.</li>
+            <li><strong>Desarrollo y Depuración (en Code Studio):</strong> El proyecto avanzará automáticamente dentro de <strong>Code Studio</strong>. Cuando la primera fase termine, deberás superar el minijuego de depuración en esta misma aplicación.</li>
+            <li><strong>Vídeo y SEO (en MyTube):</strong> Una vez depurado, abre la app <strong>MyTube</strong>. Desde aquí, podrás iniciar el minijuego de optimización SEO para promocionar tu proyecto.</li>
+            <li><strong>Publicación (en Navegador):</strong> Con el vídeo listo, el paso final es abrir el <strong>Navegador</strong>. Dentro, encontrarás la opción para publicar tu proyecto en tu "Almacén", momento en el que empezará a generar ingresos pasivos.</li>
+        </ol>
+    </div>
+    <div class="help-section">
+        <h4><i class="fas fa-box-open"></i> Otras Aplicaciones Útiles</h4>
+        <ul>
+            <li><span><strong>Almacén:</strong></span><div>Aquí puedes ver la lista de todos tus proyectos completados y los ingresos que generan.</div></li>
+            <li><span><strong>Estadísticas:</strong></span><div>Consulta el progreso de tus habilidades (Programación, Diseño, Marketing).</div></li>
+            <li><span><strong>Tienda, Cursos, I+D:</strong></span><div>Estas aplicaciones funcionan como antes, pero ahora dentro de sus propias ventanas.</div></li>
+            <li><span><strong>Dormir (Menú de Inicio):</strong></span><div>Para pasar al día siguiente, haz clic en el icono del menú de inicio en la esquina inferior izquierda y luego en el botón 'Dormir'.</div></li>
+        </ul>
+    </div>
+        <div class="help-section">
+        <h4><i class="fas fa-server"></i> Gastos y Game Over</h4>
+        <p>Recuerda que cada 7 días tendrás que pagar el <strong>alquiler del servidor</strong>. Si tu saldo es negativo después del pago, será <strong>Game Over</strong>.</p>
+    </div>
+</div>
         </div>
     </div>
     
