--- a/juego/juego.html
+++ b/juego/juego.html
@@ -60,10 +60,13 @@
                 <img src="https://i.ibb.co/S4ksHXhy/defava.png" alt="User Avatar">
                 <span>Guest</span>
             </div>
-            <div class="start-menu-body"></div>
+            <div class="start-menu-body">
+			<a href="../index.html" class="back-to-portfolio-link">← Volver al Portfolio</a>
+			</div>
             <div class="start-menu-footer">
-                <button id="shutdown-button"><i class="fas fa-power-off"></i> Dormir</button>
-            </div>
+    <button id="shutdown-button"><i class="fas fa-power-off"></i> Dormir</button>
+    <button id="main-menu-button" title="Volver al Menú Principal"><i class="fas fa-sign-out-alt"></i></button>
+</div>
         </div>
 	</div>
     </div>
@@ -230,7 +233,6 @@
         </div>
     </div>
 
-    <a href="../index.html" class="back-to-portfolio-link">← Volver al Portfolio</a>
     <div id="notification-container"></div>
 
     <script src="data.js" defer></script>
