--- a/juego/juego.html
+++ b/juego/juego.html
@@ -57,17 +57,17 @@
             </div>
 
             <div id="start-menu" class="hidden">
-    <div class="start-menu-header">
-        <img src="https://i.ibb.co/S4ksHXhy/defava.png" alt="User Avatar">
-        <span>Guest</span>
-    </div>
-    <div class="start-menu-body">
-        </div>
-    <div class="start-menu-footer">
-        <button id="shutdown-button"><i class="fas fa-power-off"></i> Dormir</button>
-        <button id="main-menu-button" title="Volver al Menú Principal"><i class="fas fa-sign-out-alt"></i></button>
-    </div>
-</div>
+                <div class="start-menu-header">
+                    <img src="https://i.ibb.co/S4ksHXhy/defava.png" alt="User Avatar">
+                    <span>Guest</span>
+                </div>
+                <div class="start-menu-body">
+                </div>
+                <div class="start-menu-footer">
+                    <button id="shutdown-button"><i class="fas fa-power-off"></i> Dormir</button>
+                    <button id="main-menu-button" title="Volver al Menú Principal"><i class="fas fa-sign-out-alt"></i></button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -79,7 +79,7 @@
     </template>
     <template id="mytube-template">
         <div class="mytube-layout">
-            <div class="video-preview"><img src="https://i.imgur.com/3fO0s3E.png" alt="Video Thumbnail"><h3 class="video-title-overlay"></h3></div>
+            <div class="video-preview"><img src="https://placehold.co/600x400/10121b/ffffff?text=Miniatura+del+Video" alt="Video Thumbnail"><h3 class="video-title-overlay"></h3></div>
             <div class="upload-section"><h4>Subiendo Vídeo...</h4><div class="progress-bar-container"><div class="progress-bar"></div></div><div class="seo-minigame-container"></div></div>
         </div>
     </template>
