--- a/juego/juego.html
+++ b/juego/juego.html
@@ -210,7 +210,9 @@
     <script src="minigames.js" defer></script>
     <script src="events.js" defer></script>
     <script src="desktop.js" defer></script> 
-    <script src="ui.js" defer></script>
+    <script src="ui-core.js" defer></script>
+    <script src="ui-apps.js" defer></script>
+    <script src="ui-modal.js" defer></script>
     <script src="main.js" defer></script>
 </body>
 </html>
