--- a/juego/juego.html
+++ b/juego/juego.html
@@ -91,6 +91,18 @@
     </template>
     <template id="warehouse-template"><div id="completed-projects-list"></div></template>
     <template id="stats-template"><div id="skills-panel"></div></template>
+    <template id="bank-template">
+        <div class="bank-layout">
+            <div id="active-loan-status" class="hidden">
+                </div>
+            <div id="loan-options">
+                <h4>Préstamos Disponibles</h4>
+                <p class="bank-info">Solo puedes tener un préstamo activo a la vez. La devolución se cobrará automáticamente en la fecha indicada.</p>
+                <div class="loan-cards-container">
+                    </div>
+            </div>
+        </div>
+    </template>
     
     <div id="daily-summary-modal" class="modal-overlay hidden">
         <div class="modal-content">
