--- a/juego/juego.html
+++ b/juego/juego.html
@@ -219,6 +219,7 @@
     <script src="courses.js" defer></script>
     <script src="research.js" defer></script>
     <script src="shop.js" defer></script>
+    <script src="bank.js" defer></script>
     <script src="minigames.js" defer></script>
     <script src="events.js" defer></script>
     <script src="desktop.js" defer></script> 
