--- a/juego/juego.html
+++ b/juego/juego.html
@@ -151,9 +151,22 @@
 			            <li><span><strong>Menú de Inicio:</strong></span><div>Usa el menú para <strong>Dormir</strong> (pasar de día y guardar) o para <strong>Volver al Menú Principal</strong> (¡cuidado, no guarda el progreso del día!).</div></li>
 			        </ul>
 			    </div>
-			        <div class="help-section">
+                <div class="help-section">
+                    <h4><i class="fas fa-piggy-bank"></i> El Banco y los Préstamos</h4>
+                    <p>La aplicación del <strong>Banco</strong> te permite solicitar préstamos cuando necesitas una inyección de capital. Sin embargo, úsalos con prudencia:</p>
+                    <ul>
+                        <li><span><strong>Un préstamo a la vez:</strong></span><div>No puedes solicitar un nuevo préstamo hasta que hayas devuelto el que tienes activo.</div></li>
+                        <li><span><strong>Pago con intereses:</strong></span><div>En la fecha de vencimiento, el banco te cobrará automáticamente el importe total del préstamo más los intereses.</div></li>
+                        <li><span><strong>Riesgo de bancarrota:</strong></span><div>Asegúrate de tener fondos suficientes para la devolución. Al igual que con el alquiler, si el cobro del préstamo deja tu saldo en negativo, será <strong>Game Over</strong>.</div></li>
+                    </ul>
+                </div>
+			    <div class="help-section">
 			        <h4><i class="fas fa-server"></i> Gastos y Game Over</h4>
-			        <p>Recuerda que cada 7 días tendrás que pagar el <strong>alquiler del servidor</strong>. Si tu saldo es negativo después del pago, será <strong>Game Over</strong>.</p>
+			        <p>Recuerda que tienes gastos fijos que pueden llevarte al <strong>Game Over</strong> si no puedes pagarlos:</p>
+                    <ul>
+                        <li><span><strong>Alquiler del Servidor:</strong></span><div>Se cobra cada 7 días. Si el pago deja tu saldo en negativo, se acaba la partida.</div></li>
+                        <li><span><strong>Devolución de Préstamos:</strong></span><div>Se cobra en la fecha de vencimiento. Si este pago te deja en números rojos, también será Game Over.</div></li>
+                    </ul>
 			    </div>
 			</div>
         </div>
